--- a/react-version/package.json
+++ b/react-version/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.922.0",
+    "@privy-io/react-auth": "^1.99.1",
+    "react-router-dom": "^6.22.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -20,12 +22,23 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.38",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
+    "util": "^0.12.5",
+    "vite": "^5.3.1",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
