added chagnes in the config

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,18 @@ VITE_R2_BUILD_URL=https://pub-c51325b05b6848599be1cf2978bc4c0e.r2.dev/latest
 # - .env is already in .gitignore
 # - Store secrets in GitHub Secrets for CI/CD
 # - Rotate keys if accidentally exposed
+
+
+VITE_PRIVY_APP_ID=<>
+VITE_PRIVY_SECRET=<>
+VITE_BACKEND_URL=<>
+## Allowed EVM chain (0G Aristotle Mainnet)
+VITE_ALLOWED_CHAIN_ID=16661
+VITE_ALLOWED_CHAIN_NAME=0G Mainnet
+VITE_ALLOWED_NATIVE_NAME=0G
+VITE_ALLOWED_NATIVE_SYMBOL=0G
+VITE_ALLOWED_EXPLORER_URL=https://chainscan.0g.ai
+# RPC URL for programmatic chain add
+VITE_ALLOWED_RPC_URL=https://evmrpc.0g.ai
+# Optional: Storage indexer (app-specific usage)
+VITE_ALLOWED_STORAGE_INDEXER=https://indexer-storage-turbo.0g.ai
