--- a/react-version/package.json
+++ b/react-version/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.922.0",
     "@privy-io/react-auth": "^1.99.1",
-    "react-router-dom": "^6.22.3",
     "ethers": "^6.13.4",
+    "lucide-react": "^0.562.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
