--- a/react-version/package.json
+++ b/react-version/package.json
@@ -16,6 +16,7 @@
     "ethers": "^6.13.4",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
+    "framer-motion": "^11.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3"
   },
